Fixing card wrapping spacing issue

--- a/app/components/puzzle-builder/styles.scss
+++ b/app/components/puzzle-builder/styles.scss
@@ -1,13 +1,13 @@
 & {
   img.selected-card-image {
-    width: 300px;
+    width: 295px;
     max-width: 38vw;
     margin-right: 5px;
     margin-bottom: 5px;
   }
 
   img.player-board-image {
-    width: 300px;
+    width: 295px;
     max-width: 38vw;
     margin-right: 5px;
     margin-bottom: 30px;
